--- a/404.md
+++ b/404.md
@@ -6,7 +6,7 @@ Sorry! The server can't find that page.
 
 Please consider trying to find what you need from [the home page][home].
 
-If you think something might be broken, please send an email to [webmaster][].
+If you think something might be broken, please send an email to [SuleymanEken][].
 
 [home]: {{ site.base }}/
 [webmaster]: mailto:suleyman.eken@kocaeli.edu.tr
