--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -1,8 +1,8 @@
 @InProceedings{XXX,
   author = 	 {Author 1 and Author 2},
-  title = 	 {Awesome Publication},
-  booktitle =    {International Conference on Awesome Research},
-  year = 	 2014,
-  month = 5,
-  url = {https://www.asdfasdf.asdfasdf.asdfasdfads}
+  title = 	 {KOU Teknoloji Fakültesi},
+  booktitle =    {Kocaeli Üniversitesi Teknoloji Fakültesi Labaratuvarı},
+  year = 	 2020,
+  month = 12,
+  url = {http://teknoloji.kocaeli.edu.tr/index.php}
 }
